Further code updating (audio, dictionaries) - Fix code for missing dictionary at initialization (no frame present yet, so make one) - Adjust size of LARGE interface size, make some things bigger by default if >= LARGE - Fix some warnings in code in many places. - Convert playing sounds to use javax.sound not java.applet